Guia 11
Cambios y correciones